# rootspace-rs

./: Cargo.toml  README.md
ecs/: Cargo.toml
ecs-derive/: Cargo.toml
ecs-derive/src/: lib.rs
ecs/src/: assembly.rs  component_group.rs  entity.rs  error.rs  impl_macros.rs  lib.rs  loop_stage.rs  system.rs  world.rs
engine/: Cargo.toml
engine/src/: event.rs  factory.rs  lib.rs  orchestrator.rs  physics.rs  scene_graph.rs  utilities.rs
engine/src/common/: affine_transform.rs  convex_hull.rs  factory.rs  file_manipulation.rs  half_edge_mesh.rs  hierarchy.rs  layout_group.rs  merge_sort.rs  mod.rs  physics.rs  ray.rs  resource_group.rs  text_manipulation.rs  text_rendering.rs  ui_element.rs  ui_primitive.rs  ui_styles.rs  ui_uniforms.rs  uniforms.rs  vertex.rs
engine/src/components/: bounding_volume.rs  camera.rs  cursor.rs  description.rs  material.rs  mesh.rs  mod.rs  model.rs  projection.rs  render_mode.rs  tooltip.rs  ui_state.rs  view.rs
engine/src/debugging/: debug_console.rs  debug_shell.rs  event_monitor.rs
engine/src/event/: event_interface.rs
engine/src/geometry/: model.rs
engine/src/graphics/: material.rs  mesh.rs  mod.rs  renderer.rs
engine/src/interface/: mod.rs  ui_element.rs  ui_primitive.rs  ui_state.rs  ui_styles.rs  user_interface.rs
engine/src/singletons/: factory.rs  mod.rs  physics.rs  scene_graph.rs
engine/src/systems/: cursor_controller.rs  debug_console.rs  debug_mover.rs  debug_shell.rs  debug_ui.rs  event_interface.rs  event_monitor.rs  mod.rs  renderer.rs  speech_bubble_controller.rs  tooltip_controller.rs  user_interface.rs
resources/rootspace/shaders/: rect-fragment.glsl  test-fragment.glsl  test-vertex.glsl  text-fragment.glsl  text-vertex.glsl
src/: main.rs
src/ecs/: assembly.rs  component_group.rs  entity.rs  error.rs  event.rs  loop_stage.rs  mod.rs  system.rs  world.rs
src/engine/: mod.rs  orchestrator.rs  utilities.rs
src/engine/debugging/: debug_console.rs  debug_shell.rs  description.rs  event_monitor.rs  mod.rs
src/engine/event/: event_interface.rs  mod.rs
src/engine/geometry/: mod.rs  model.rs  projection.rs  view.rs
src/engine/graphics/: material.rs  mesh.rs  mod.rs  renderer.rs  uniforms.rs  vertex.rs
src/engine/interface/: mod.rs  ui_element.rs  ui_primitive.rs  ui_state.rs  user_interface.rs
src/game/: event.rs  mod.rs  orchestrator.rs
src/game/debugging/: debug_shell.rs  mod.rs
src/game/event/: mod.rs
