[package]
name = "rootspace-rs"
description = "A game wrapped in uncertainty and mis(t)ery"
version = "0.1.0"
authors = ["Eleanore Young"]
repository = "https://github.com/nausicaea/rootspace-rs"

[workspace]

[dependencies]
clap = "^2.28.0"
log = "^0.3.8"
fern = "^0.4.3"
nalgebra = { version = "^0.13.1", features = ["serde-serialize"] }
ecs = {path = "ecs"}
engine = {path = "engine"}
