[package]
name = "rootspace-rs"
description = "A game wrapped in uncertainty and mis(t)ery"
version = "0.1.0"
authors = ["Eleanore Young"]
repository = "https://github.com/nausicaea/rootspace-rs"

[workspace]

[dependencies]
clap = "^2.28.0"
log = "^0.4.1"
fern = "^0.5.2"
nalgebra = {version = "^0.14.0", features = ["serde-serialize"]}
ecs = {path = "ecs"}
ecs-derive = {path = "ecs-derive"}
engine = {path = "engine"}
