[package]
name = "engine"
version = "0.1.0"
authors = ["Eleanore Young"]

[dependencies]
failure = "^0.1.1"
failure_derive = "^0.1.1"
bitflags = "^1.0.1"
clap = "^2.28.0"
log = "^0.3.8"
fern = "^0.4.3"
glium = "^0.18.1"
alga = "^0.5.2"
nalgebra = "^0.13.1"
image = "^0.18.0"
uuid = {version = "^0.5.1", features = ["v4"]}
unicode-normalization = "^0.1.5"
rusttype = "^0.3.0"
petgraph = "^0.4.10"
ecs = {path = "../ecs"}
