[package]
name = "engine"
version = "0.1.0"
authors = ["Eleanore Young"]

[dependencies]
failure = "^0.1.1"
failure_derive = "^0.1.1"
bitflags = "^1.0.1"
clap = "^2.28.0"
log = "^0.4.1"
fern = "^0.5.2"
glium = "^0.20.0"
alga = "^0.5.2"
serde = "^1.0.27"
serde_derive = "^1.0.27"
num-traits = "^0.2.0"
approx = "^0.1.1"
nalgebra = {version = "^0.14.0", features = ["serde-serialize"]}
image = "^0.18.0"
uuid = {version = "^0.6.0", features = ["v4", "serde"]}
unicode-normalization = "^0.1.5"
rusttype = {version = "^0.5.1", features = ["gpu_cache"]}
daggy = "^0.6.0"
ecs = {path = "../ecs"}
ecs-derive = {path = "../ecs-derive"}
